0.8
- added ability to hide menuitem in the 'Tools' menu
- added icon position configuration
- works in Flock

0.7
- moon phase names
- display next full moon time

0.6
- popup doesn't disappear after a few seconds
- precision improvement (bug fixed)
- moonrise and moonset azimuth
- sunrise/sunset moment definition config
- twilight moment definition config
- added almost all cities :)
 
0.5
- changed graphics
- added moon phase, moonrise and moonset

0.4
- bugfixes
- configuration dialog rewritten

0.3
- bugfixes
- added timezone configuration
- added timeformat configuration
- coordinates can be negative